<resources>
    <string name="app_name">ShopProductList</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_delete_purchased">Delete purchased items</string>
    <string name="action_show_prices">Show prices</string>
    <string name="action_sorting">Sorting</string>

    <string name="menu_lists">My lists</string>
    <string name="menu_basket">Basket</string>
    <string name="menu_review">Send feedback</string>
    <string name="menu_share">Recommend app</string>
    <string name="improve_that_translation">Improve translation</string>
    <string name="menu_send">Send</string>
    <string name="menu_settings">Settings</string>


    <array name="icons">
        <item>@drawable/icon_alcohol</item>
        <item>@drawable/icon_pharmacy</item>
        <item>@drawable/icon_newspaper_books_music</item>
        <item>@drawable/icon_ready_dish</item>
        <item>@drawable/icon_diet_food</item>
        <item>@drawable/icone_home_and_kitchen</item>
        <item>@drawable/icon_home_cake</item>
        <item>@drawable/icon_food_preservation</item>
        <item>@drawable/icon_frozen_foods</item>
        <item>@drawable/icon_stationery</item>
        <item>@drawable/icon_canned_food</item>
        <item>@drawable/icon_coffee_tea_cocoa</item>
        <item>@drawable/icon_cereals_pasta</item>
        <item>@drawable/icon_personal_hygiene</item>
        <item>@drawable/icon_oils</item>
        <item>@drawable/icon_milk_produce</item>
        <item>@drawable/icon_meat_poultry</item>
        <item>@drawable/icon_drinks</item>
        <item>@drawable/icon_clothes</item>
        <item>@drawable/icon_etc</item>
        <item>@drawable/icon_fish_and_seafood</item>
        <item>@drawable/icon_sweets_snack_food</item>
        <item>@drawable/icon_sauces_spices_seasonings</item>
        <item>@drawable/house_cleaning</item>
        <item>@drawable/icon_car_care</item>
        <item>@drawable/icon_baby_care</item>
        <item>@drawable/icon_pet_care</item>
        <item>@drawable/icon_fruits_and_vegetables</item>
        <item>@drawable/icon_bread_and_pastries</item>
        <item>@drawable/icon_electronics_and_engineering</item>
        <item>@drawable/most_popular_product</item>
    </array>



    <string-array name="group_product">
        <item>Алкагольные напитки</item>
        <item>Аптека</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>Популярное</item>




    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
