<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_content_paste"
            android:title="@string/menu_lists" />
        <item
            android:id="@+id/nav_basket"
            android:icon="@drawable/ic_delete"
            android:title="@string/menu_basket" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_rate_review"
            android:title="@string/menu_review" />
        <item
            android:id="@+id/nav_recommend"
            android:icon="@drawable/ic_share"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
    </group>

    <item android:title="The app is only in English">
        <menu>
            <item
                android:id="@+id/nav_improve_translation"
                android:icon="@drawable/flag"
                android:title="@string/improve_that_translation" />
        </menu>
    </item>

</menu>
