<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.dmiryz.ryzhov.shopproductlist.ui.home.HomeFragment"
        android:label="@string/menu_lists"
        tools:layout="@layout/fragment_home_list" >
        <action
            android:id="@+id/action_nav_home_to_productFragment"
            app:destination="@id/productFragment" />
        <action
            android:id="@+id/action_nav_home_to_nav_recommend"
            app:destination="@id/nav_recommend" />
        <action
            android:id="@+id/action_nav_home_to_nav_basket"
            app:destination="@id/nav_basket" />
        <action
            android:id="@+id/action_nav_home_to_nav_feedback"
            app:destination="@id/nav_feedback" />
        <action
            android:id="@+id/action_nav_home_to_nav_setting"
            app:destination="@id/nav_setting" />
        <action
            android:id="@+id/action_nav_home_to_nav_improve_translation"
            app:destination="@id/nav_improve_translation" />
    </fragment>

    <fragment
        android:id="@+id/nav_basket"
        android:name="com.example.dmiryz.ryzhov.shopproductlist.ui.gallery.BasketFragment"
        android:label="@string/menu_basket"
        tools:layout="@layout/fragment_basket" />

    <fragment
        android:id="@+id/nav_feedback"
        android:name="com.example.dmiryz.ryzhov.shopproductlist.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_review"
        tools:layout="@layout/fragment_feedback" />

    <fragment
        android:id="@+id/nav_recommend"
        android:name="com.example.dmiryz.ryzhov.shopproductlist.ui.tools.ToolsFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_recommend" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.example.dmiryz.ryzhov.shopproductlist.ui.share.ShareFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_improve_translation"
        android:name="com.example.dmiryz.ryzhov.shopproductlist.ui.send.SendFragment"
        android:label="@string/improve_that_translation"
        tools:layout="@layout/fragment_translate_improve" />

    <fragment
        android:id="@+id/productFragment"
        android:name="com.example.dmiryz.ryzhov.shopproductlist.ui.product.ProductFragment"
        android:label="product_fragment"
        tools:layout="@layout/product_fragment" >
        <action
            android:id="@+id/action_productFragment_to_addProductFragment"
            app:destination="@id/addProductFragment" />
    </fragment>
    <fragment
        android:id="@+id/addProductFragment"
        android:name="com.example.dmiryz.ryzhov.shopproductlist.ui.addProduct.AddProductFragment"
        android:label="add_product_fragment"
        tools:layout="@layout/add_product_fragment" />
</navigation>