<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_delete_purchased_items"
        android:orderInCategory="100"
        android:title="@string/action_delete_purchased"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_show_prices"
        android:orderInCategory="100"
        android:title="@string/action_show_prices"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sorting"
        android:orderInCategory="100"
        android:title="@string/action_sorting"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_edit"
        android:orderInCategory="100"
        android:icon="@drawable/ic_edit"
        android:visible="false"
        app:showAsAction="always"
        android:title="Edit" />
    <item
        android:id="@+id/action_cooperative"
        android:orderInCategory="100"
        android:icon="@drawable/ic_cooperative"
        app:showAsAction="always"
        android:title="Cooperative" />

</menu>
